--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.basetechz.showbox">
 
-
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -14,7 +13,24 @@
         android:theme="@style/Theme.ShowBox"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".A_HomeFragment.Fragments.A_ForYou.ActionMoviePage"
+            android:exported="false" />
+        <activity
+            android:name=".A_HomeFragment.Fragments.A_ForYou.StockMoviePage"
+            android:exported="false" />
+        <activity
+            android:name=".A_HomeFragment.Fragments.A_ForYou.ThrillerMoviePage"
+            android:exported="false" />
+        <activity
+            android:name=".A_HomeFragment.Fragments.A_ForYou.MoviePage"
+            android:exported="false" />
+        <activity
+            android:name=".VideoActivity"
+            android:configChanges="orientation|screenSize|screenLayout"
+            android:exported="true"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen" />
+        <activity
+            android:name=".a_MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,9 +38,16 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
+
+
+        <meta-data
+            android:name="com.google.android.gms.drive.com.basetechz.showbox"
+            android:value="967943280847-962qrjj0dg2vobk48b93a4epm2u5im2n.apps.googleusercontent.com" />
+
     </application>
 
 </manifest>
